# agentIGOR

./: .gitignore  README.md  pyproject.toml  town.cache
agentigor/: agent_igor.py
