[tool.poetry]
name = "agentigor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agentigor = "agentigor.agent_igor:main"

[tool.ruff]
select = ["ALL"]
ignore = [
  # one-blank-line-before-class
  "D203",
  # multi-line-summary-second-line
  "D213",
]
